--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build:umd": "rollup --config rollup.config.js --format umd --file dist/my-component.umd.js",
     "build:es": "rollup --config rollup.config.js --format es --file dist/my-component.esm.js",
     "build:unpkg": "rollup --config rollup.config.js --format iife --file dist/my-component.min.js",
-    "lint": "eslint --ext js,ts,vue --ignore-path .gitignore ."
+    "lint": "eslint --ext js,ts,vue --ignore-path .gitignore .",
+    "serve": "vue serve --open src/md-editor.vue"
   },
   "repository": "https://github.com/nandenjin/md-editor.git",
   "author": "Kazumi Inada <hello@nandenjin.com>",
@@ -20,17 +21,21 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
+    "@vue/cli": "^3.11.0",
     "eslint": "^6.3.0",
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-vue": "^5.2.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
+    "pug": "^2.0.4",
+    "pug-plain-loader": "^1.0.0",
     "rollup": "^1.21.2",
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-typescript": "^1.0.1",
     "rollup-plugin-vue": "^5.0.1",
+    "sass-loader": "7.3.1",
     "typescript": "^3.6.3",
     "vue": "^2.6.10",
     "vue-template-compiler": "^2.6.10"
