Add parser to Markdown

--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "sass-loader": "7.3.1",
     "vue": "^2.6.10",
     "vue-template-compiler": "^2.6.10"
+  },
+  "dependencies": {
+    "h2m": "https://github.com/nandenjin/h2m.git"
   }
 }
